--- a/application/backend/src/main/resources/apps/bulma/components/level/levelitem/levelitem.html
+++ b/application/backend/src/main/resources/apps/bulma/components/level/levelitem/levelitem.html
@@ -17,12 +17,16 @@
 */-->
 
 <sly data-sly-use.model="pl.ds.bulma.components.models.level.LevelItemComponent">
-  <div data-sly-unwrap="${!wcmmode.isEdit}" class="level-item ${model.levelItemStyle}" style="min-width: 125px; min-height: 50px">
-    <sly data-sly-test="${resource.hasChildren}">
-      <div data-sly-element=${model.elementType} class="level-item ${model.levelItemStyle}">
-        <sly
-            data-sly-include="${'parsys.html' @ prependPath='/libs/wcm/foundation/components/parsys'}"></sly>
-      </div>
+  <sly data-sly-test.classes="level-item ${model.levelItemStyle}"></sly>
+  <sly data-sly-test="${resource.hasChildren}">
+    <div data-sly-element=${model.elementType} class="${classes}">
+      <sly
+          data-sly-include="${'parsys.html' @ prependPath='/libs/wcm/foundation/components/parsys'}"></sly>
+    </div>
+  </sly>
+  <sly data-sly-test="${!resource.hasChildren}">
+    <sly data-sly-use.lib="/libs/wcm/foundation/components/commons/templates.html"
+         data-sly-call="${lib.placeholder @ classes=classes}">
     </sly>
-  </div>
+  </sly>
 </sly>
