--- a/application/backend/src/main/resources/apps/bulma/components/button/button.html
+++ b/application/backend/src/main/resources/apps/bulma/components/button/button.html
@@ -25,11 +25,10 @@
             <i class="${model.icon}"></i>
           </span>
         </sly>
-        <span>${model.label}</span>
+        <span data-sly-unwrap="${model.label == ''}">${model.label}</span>
       </button>
     </sly>
     <sly data-sly-test="${!disabled}">
-
       <sly data-sly-test="${model.actionType == 'open-modal'}">
         <button class="button js-modal-trigger ${model.buttonClasses @ join=' '}" data-target="${model.modalId}">
           <sly data-sly-test="${model.addIcon}">
@@ -37,7 +36,7 @@
             <i class="${model.icon}"></i>
           </span>
           </sly>
-          <span>${model.label}</span>
+          <span data-sly-unwrap="${model.label == ''}">${model.label}</span>
         </button>
       </sly>
 
@@ -48,7 +47,7 @@
             <i class="${model.icon}"></i>
           </span>
           </sly>
-          <span>${model.label}</span>
+          <span data-sly-unwrap="${model.label == ''}">${model.label}</span>
         </button>
       </sly>
 
@@ -62,7 +61,7 @@
           <i class="${model.icon}"></i>
         </span>
       </sly>
-      <span>${model.label}</span>
+      <span data-sly-unwrap="${model.label == ''}">${model.label}</span>
     </a>
   </sly>
 </sly>
