--- a/application/backend/src/main/resources/apps/bulma/components/table/tablecontainer/tablecontainer.html
+++ b/application/backend/src/main/resources/apps/bulma/components/table/tablecontainer/tablecontainer.html
@@ -17,8 +17,8 @@
 */-->
 
 <sly data-sly-test="${resource.hasChildren}">
-  <tbody>
-  <sly
-      data-sly-include="${'parsys.html' @ prependPath='/libs/wcm/foundation/components/parsys'}"></sly>
-  </tbody>
+  <div class="table-container">
+    <sly
+        data-sly-include="${'parsys.html' @ prependPath='/libs/wcm/foundation/components/parsys'}"></sly>
+  </div>
 </sly>
