--- a/application/backend/src/main/resources/apps/bulma/components/table/tablehead/tablehead.html
+++ b/application/backend/src/main/resources/apps/bulma/components/table/tablehead/tablehead.html
@@ -18,7 +18,11 @@
 
 <sly data-sly-test="${resource.hasChildren}">
   <thead>
-    <sly
-        data-sly-include="${'parsys.html' @ prependPath='/libs/wcm/foundation/components/parsys'}"></sly>
+  <sly
+      data-sly-include="${'parsys.html' @ prependPath='/libs/wcm/foundation/components/parsys'}"></sly>
   </thead>
+</sly>
+<sly data-sly-test="${!resource.hasChildren}">
+  <sly data-sly-use.lib="/libs/wcm/foundation/components/commons/templates.html"
+       data-sly-call="${lib.placeholder @ classes=''}"></sly>
 </sly>
