--- a/application/frontend/src/author.scss
+++ b/application/frontend/src/author.scss
@@ -36,6 +36,14 @@
   min-height: 50px;
 }
 
-.table .ws-placeholder {
-  width: 100%;
-}
+//.table thead .ws-placeholder, .table tbody .ws-placeholder, .table tfoot .ws-placeholder {
+//  display: table-row;
+//  height: 48px;
+//  width: 100%;
+//}
+
+//.table .ws-placeholder {
+//  display: table-row;
+//  height: 48px;
+//  width: 100%;
+//}
