--- a/application/frontend/src/author.scss
+++ b/application/frontend/src/author.scss
@@ -42,7 +42,7 @@
 //  width: 100%;
 //}
 
-//.table .ws-placeholder {
+//.table > .ws-placeholder {
 //  display: table-row;
 //  height: 48px;
 //  width: 100%;
