--- a/application/backend/src/main/resources/apps/bulma/components/table/tablecell/tablecell.html
+++ b/application/backend/src/main/resources/apps/bulma/components/table/tablecell/tablecell.html
@@ -17,7 +17,7 @@
 */-->
 
 <sly data-sly-use.model="pl.ds.bulma.components.models.TableCellComponent">
-  <td>
+  <td rowspan="${model.rowspan}" colspan="${model.colspan}">
     ${model.text @ context='html'}
   </td>
 </sly>
