refactor and add test cases

--- a/application/backend/src/main/resources/apps/bulma/components/table/tablecell/tablecell.html
+++ b/application/backend/src/main/resources/apps/bulma/components/table/tablecell/tablecell.html
@@ -16,7 +16,7 @@
   ~
 */-->
 
-<sly data-sly-use.model="pl.ds.bulma.components.models.TableCellComponent">
+<sly data-sly-use.model="pl.ds.bulma.components.models.table.TableCellComponent">
   <td rowspan="${model.rowspan}" colspan="${model.colspan}">
     ${model.text @ context='html'}
   </td>
