--- a/application/backend/src/main/resources/apps/bulma/components/table/table.html
+++ b/application/backend/src/main/resources/apps/bulma/components/table/table.html
@@ -16,7 +16,7 @@
   ~
 */-->
 
-<sly data-sly-use.model="pl.ds.bulma.components.models.TableComponent">
+<sly data-sly-use.model="pl.ds.bulma.components.models.table.TableComponent">
   <sly data-sly-test.classes="table ${model.tableClasses @ join=' '}"></sly>
   <sly data-sly-test="${resource.hasChildren}">
     <table class="${classes}">
