--- a/application/backend/src/main/resources/apps/bulma/components/table/tableheadcell/tableheadcell.html
+++ b/application/backend/src/main/resources/apps/bulma/components/table/tableheadcell/tableheadcell.html
@@ -16,7 +16,7 @@
   ~
 */-->
 
-<sly data-sly-use.model="pl.ds.bulma.components.models.TableHeadCellComponent">
+<sly data-sly-use.model="pl.ds.bulma.components.models.table.TableHeadCellComponent">
   <th rowspan="${model.rowspan}" colspan="${model.colspan}">
     ${model.text @ context='html'}
   </th>
