Feature/table component (#99)
* initial table components

* fix typo

* add missing apache license

* improvements to the table component

* remove experiment

* fix footer reference, add css experiment

* add colspan and rowspan implementation

* css table experiment

* add css to style table in edit mode

* refactor and add test cases

* add missing package info to table package

* css table adjustments

* delete unused imports, reformatting

* minor improvements based on feedback

--- a/application/frontend/src/author.scss
+++ b/application/frontend/src/author.scss
@@ -35,3 +35,40 @@
   min-width: 125px;
   min-height: 50px;
 }
+
+.table {
+
+  border-collapse: separate;
+  border-spacing: 0 2px;
+  min-width: 100px;
+
+  .ws-placeholder {
+    display: table-row-group;
+    height: 48px;
+    width: 100%;
+  }
+
+  & > .ws-placeholder {
+    &::after, &::before {
+      content: "";
+      display: block;
+      height: 2px;
+      width: 100%;
+    }
+  }
+
+  thead, tbody, tfoot {
+
+    .ws-placeholder {
+      display: table-row;
+    }
+
+    &::after, &::before {
+      content: "";
+      display: block;
+      height: 2px;
+      width: 100%;
+    }
+  }
+
+}
