--- a/application/backend/src/main/resources/apps/bulma/components/tabs/tab/tab.html
+++ b/application/backend/src/main/resources/apps/bulma/components/tabs/tab/tab.html
@@ -56,7 +56,7 @@
 
     <!--        preview mode layout-->
     <sly data-sly-test="${!wcmmode.isEdit}">
-        <li data-target="${model.label}">
+        <li data-target="${resource.path}">
             <a>
                 <sly data-sly-test="${model.icon}">
                     <span class="icon is-small"><i class="${model.icon}" aria-hidden="true"></i></span>
