--- a/application/backend/src/main/resources/apps/bulma/components/tabs/tabs.html
+++ b/application/backend/src/main/resources/apps/bulma/components/tabs/tabs.html
@@ -16,8 +16,8 @@
   ~
 */-->
 <sly data-sly-use.model="pl.ds.bulma.components.models.TabsComponent">
-    <sly data-sly-test="${wcmmode.isEdit}">
-        <div id="check" data-check="true" style="display: none"></div>
+    <sly data-sly-test="${!wcmmode.isEdit}">
+        <div id="check" data-edit-check="false" style="display: none"></div>
     </sly>
         <sly data-sly-test="${resource.hasChildren}">
             <!--        edit mode layout-->
@@ -49,7 +49,7 @@
                     <sly data-sly-list="${resource.children}">
                         <sly data-sly-test="${item.resourceType == 'bulma/components/tabs/tab'}">
                             <sly data-sly-test="${item.hasChildren}">
-                                <sly data-sly-test.tabid="${item.label}">
+                                <sly data-sly-test.tabid="${item.path}">
                                     <sly data-sly-list="${item.children}">
                                         <sly data-sly-test="${item.resourceType == 'bulma/components/tabs/tabcontent'}">
                                             <div id="${tabid}" class="is-hidden">
