--- a/application/backend/src/main/resources/apps/bulma/components/contactform/contactform.html
+++ b/application/backend/src/main/resources/apps/bulma/components/contactform/contactform.html
@@ -17,12 +17,11 @@
 */-->
 
 <sly data-sly-use.model="pl.ds.bulma.components.models.ContactFormComponent">
-  <form action="${model.targetUrl}" method="get" class="contact-form">
-
+  <form>
     <div class="field">
       <label class="label">Email address</label>
       <div class="control has-icons-left">
-        <input class="input" type="email" name="email" id="email" placeholder="Email" required>
+        <input class="input" type="email" name="email" placeholder="Email" required>
         <span class="icon is-small is-left">
           <i class="fas fa-envelope"></i>
         </span>
@@ -33,7 +32,7 @@
       <div class="field">
         <label class="label">Phone Number</label>
         <div class="control has-icons-left">
-          <input class="input" type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" placeholder="Phone Number">
+          <input class="input" type="tel" name="phoneNumber" placeholder="Phone Number" required>
           <span class="icon is-small is-left">
           <i class="fas fa-phone"></i>
         </span>
@@ -45,7 +44,7 @@
       <div class="field">
         <label class="label">Subject</label>
         <div class="control">
-          <input class="input" type="text" id="subject" name="subject" placeholder="Subject">
+          <input class="input" type="text" name="subject" placeholder="Subject" required>
         </div>
       </div>
     </sly>
@@ -53,40 +52,23 @@
     <div class="field">
       <label class="label">Message</label>
       <div class="control">
-        <textarea class="textarea" placeholder="Write your message here..." required></textarea>
+        <textarea class="textarea" name="message" placeholder="Write your message here..."
+                  required></textarea>
       </div>
     </div>
 
     <div class="field is-horizontal">
-      <div class="field-label">
-        <label class="label">${model.consentText @ context='html'}</label>
-      </div>
-      <div class="field-body">
-        <div class="field">
-          <div class="control">
-            <label class="checkbox">
-              <input type="checkbox" required>
-            </label>
-          </div>
-        </div>
+      <div class="control">
+        <label class="checkbox">
+          <input type="checkbox" required>
+          ${model.consentText @ context='html'}
+        </label>
       </div>
     </div>
 
-<!--    <div class="field">-->
-<!--      <div class="control">-->
-<!--        <label class="checkbox">-->
-<!--          ${model.consentText @ context='html'}-->
-<!--          <input type="checkbox" required>-->
-<!--        </label>-->
-<!--      </div>-->
-<!--    </div>-->
-
-    <div class="field is-grouped">
+    <div class="field">
       <div class="control">
         <button class="button is-link">${model.submitLabel}</button>
-      </div>
-      <div class="control">
-        <button class="button is-link is-light">${model.cancelLabel}</button>
       </div>
     </div>
   </form>
