--- a/application/backend/src/main/resources/apps/bulma/components/contactform/contactform.html
+++ b/application/backend/src/main/resources/apps/bulma/components/contactform/contactform.html
@@ -26,7 +26,7 @@
           <i class="fas fa-envelope"></i>
         </span>
       </div>
-      <p id="emailError" class="help is-danger is-hidden">This email is invalid</p>
+      <p class="help is-danger is-hidden email-validate-error">This email is invalid</p>
     </div>
     
     <sly data-sly-test="${model.phoneNumber}">
