--- a/application/backend/src/main/resources/apps/bulma/components/mediaobject/medialeft/medialeft.html
+++ b/application/backend/src/main/resources/apps/bulma/components/mediaobject/medialeft/medialeft.html
@@ -16,7 +16,7 @@
   ~
 */-->
 
-<sly data-sly-test.hasChildren="${resource.hasChildren}">
+<sly data-sly-test="${resource.hasChildren}">
   <div class="media-left">
     <sly data-sly-list="${resource.children}">
       <sly data-sly-resource="${item}"></sly>
