--- a/application/backend/src/main/resources/apps/bulma/components/navbar/navbar.html
+++ b/application/backend/src/main/resources/apps/bulma/components/navbar/navbar.html
@@ -17,7 +17,7 @@
 */-->
 
 <sly data-sly-use.model="pl.ds.bulma.components.models.navbar.NavbarComponent">
-  <sly data-sly-test.classes="navbar ${model.navbarStyle}"></sly>
+  <sly data-sly-set.classes="navbar ${model.navbarStyle}"></sly>
   <sly data-sly-test="${resource.hasChildren}">
     <nav class="${classes}" role="navigation" aria-label="main navigation" >
       <sly data-sly-include="${'parsys.html' @ prependPath='/libs/wcm/foundation/components/parsys'}"></sly>
