--- a/application/backend/src/main/resources/apps/bulma/components/tiles/tiles.html
+++ b/application/backend/src/main/resources/apps/bulma/components/tiles/tiles.html
@@ -24,7 +24,7 @@
   </div>
 </sly>
 <sly data-sly-test="${!hasChildren}">
-  <sly data-sly-test.modelClasses="tile is-ancestor"></sly>
+  <sly data-sly-set.modelClasses="tile is-ancestor"></sly>
   <sly data-sly-use.lib="/libs/wcm/foundation/components/commons/templates.html"
        data-sly-call="${lib.placeholder @ classes=modelClasses}"></sly>
 </sly>
