--- a/application/backend/src/main/resources/apps/bulma/components/page/body.html
+++ b/application/backend/src/main/resources/apps/bulma/components/page/body.html
@@ -16,8 +16,8 @@
   ~
 */-->
 
-<sly data-sly-test.navbarFixed="${properties.navbarFixed}"></sly>
-<sly data-sly-test.position="${properties.navbarFixedPosition}"></sly>
+<sly data-sly-set.navbarFixed="${properties.navbarFixed}"></sly>
+<sly data-sly-set.position="${properties.navbarFixedPosition}"></sly>
 
 <body class="${properties.defaultTemplateCSS} ${navbarFixed ? position : ''}">
 <sly data-sly-include="body-content.html"></sly>
