Add id to navbarmenu template, fix eslint minor problems

--- a/application/backend/src/main/resources/apps/bulma/components/navbar/navbarbrand/navbarbrand.html
+++ b/application/backend/src/main/resources/apps/bulma/components/navbar/navbarbrand/navbarbrand.html
@@ -25,7 +25,7 @@
       </sly>
       <sly data-sly-test="${model.createBurger}">
         <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false"
-           data-target="navbar-menu">
+           data-target="navMenu">
           <span aria-hidden="true"></span>
           <span aria-hidden="true"></span>
           <span aria-hidden="true"></span>
