Fixes after PR (#97)

--- a/application/backend/src/main/resources/apps/bulma/components/contactform/contactform.html
+++ b/application/backend/src/main/resources/apps/bulma/components/contactform/contactform.html
@@ -17,7 +17,7 @@
 */-->
 
 <sly data-sly-use.model="pl.ds.bulma.components.models.ContactFormComponent">
-  <form id="${resource.name}">
+  <form>
     <div class="field">
       <label class="label">Email address</label>
       <div class="control has-icons-left">
