--- a/application/backend/src/main/resources/apps/bulma/components/page/body.html
+++ b/application/backend/src/main/resources/apps/bulma/components/page/body.html
@@ -16,9 +16,11 @@
   ~
 */-->
 
+<sly data-sly-use.model="pl.ds.bulma.components.models.PageComponent">
 <sly data-sly-set.navbarFixed="${properties.navbarFixed}"></sly>
 <sly data-sly-set.position="${properties.navbarFixedPosition}"></sly>
 
-<body class="${properties.defaultTemplateCSS} ${navbarFixed ? position : ''}">
+<body data-config='{"contactForm": "${model.configEndpoint}"}' class="${properties.defaultTemplateCSS} ${navbarFixed ? position : ''}">
 <sly data-sly-include="body-content.html"></sly>
 </body>
+</sly>
