#165 Reimplemented button feature after redesign

--- a/application/backend/src/main/resources/apps/bulma/components/button/button.html
+++ b/application/backend/src/main/resources/apps/bulma/components/button/button.html
@@ -22,7 +22,7 @@
                 <sly data-sly-use.template="./template.html"
                      data-sly-call="${template.buttonContent @
              label=model.label, addIcon=model.addIcon,
-             icon=model.icon, iconPosition=model.iconPosition}"></sly>
+             icon=model.icon, iconRight=model.iconRight}"></sly>
             </button>
         </sly>
         <sly data-sly-test="${!disabled}">
@@ -32,7 +32,7 @@
                     <sly data-sly-use.template="./template.html"
                          data-sly-call="${template.buttonContent @
              label=model.label, addIcon=model.addIcon,
-             icon=model.icon, iconPosition=model.iconPosition}"></sly>
+             icon=model.icon, iconRight=model.iconRight}"></sly>
                 </button>
             </sly>
 
@@ -41,7 +41,7 @@
                     <sly data-sly-use.template="./template.html"
                          data-sly-call="${template.buttonContent @
              label=model.label, addIcon=model.addIcon,
-             icon=model.icon, iconPosition=model.iconPosition}"></sly>
+             icon=model.icon, iconRight=model.iconRight}"></sly>
                 </button>
             </sly>
         </sly>
@@ -52,7 +52,7 @@
             <sly data-sly-use.template="./template.html"
                  data-sly-call="${template.buttonContent @
              label=model.label, addIcon=model.addIcon,
-             icon=model.icon, iconPosition=model.iconPosition}"></sly>
+             icon=model.icon, iconRight=model.iconRight}"></sly>
         </a>
     </sly>
 </sly>
