--- a/application/backend/src/main/resources/apps/bulma/components/button/template.html
+++ b/application/backend/src/main/resources/apps/bulma/components/button/template.html
@@ -13,16 +13,16 @@
     See the License for the specific language governing permissions and
     limitations under the License.
 */-->
-<template data-sly-template.buttonContent="${ @ label, addIcon, icon, iconPosition}">
-    <sly data-sly-test="${addIcon && iconPosition == 'left'}">
+<template data-sly-template.buttonContent="${ @ label, addIcon, icon, iconRight}">
+    <sly data-sly-test="${addIcon && icon}">
           <span class="icon">
             <i class="${icon}"></i>
           </span>
     </sly>
     <span data-sly-unwrap="${label == ''}">${label}</span>
-    <sly data-sly-test="${addIcon && iconPosition == 'right'}">
+    <sly data-sly-test="${addIcon && iconRight}">
           <span class="icon">
-            <i class="${icon}"></i>
+            <i class="${iconRight}"></i>
           </span>
     </sly>
 </template>
